--- a/faq/index.html
+++ b/faq/index.html
@@ -11,65 +11,74 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
 
     <title>FAQ accordion</title>
     <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
+      <h1><img src="./assets/images/icon-star.svg" alt="" />FAQs</h1>
       <div class="card">
-        <h1><img src="./assets/images/icon-star.svg" alt="">FAQs</h1>
+        
 
-        <h4 class="question">
-          What is Frontend Mentor, and how will it help me?
-          <img src="./assets/images/icon-plus.svg" alt="collapse" />
-        </h4>
+        <div>
+          <h4 class="question">
+            What is Frontend Mentor, and how will it help me?
+            <img src="./assets/images/icon-plus.svg" alt="collapse" />
+          </h4>
 
-        <p class="answer hidden">
-          Frontend Mentor offers realistic coding challenges to help developers
-          improve their frontend coding skills with projects in HTML, CSS, and
-          JavaScript. It's suitable for all levels and ideal for portfolio
-          building.
-        </p>
+          <p class="answer hidden">
+            Frontend Mentor offers realistic coding challenges to help
+            developers improve their frontend coding skills with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
+            for portfolio building.
+          </p>
+        </div>
 
-        <h4>
-          Is Frontend Mentor free?<img
-            src="./assets/images/icon-plus.svg"
-            alt="expand"
-          />
-        </h4>
+        <div>
+          <h4>
+            Is Frontend Mentor free?<img
+              src="./assets/images/icon-plus.svg"
+              alt="expand"
+            />
+          </h4>
 
-        <p class="answer hidden">
-          Yes, Frontend Mentor offers both free and premium coding challenges,
-          with the free option providing access to a range of projects suitable
-          for all skill levels.
-        </p>
-        <h4>
-          Can I use Frontend Mentor projects in my portfolio?<img
-            src="./assets/images/icon-plus.svg"
-            alt="expand"
-          />
-        </h4>
+          <p class="answer hidden">
+            Yes, Frontend Mentor offers both free and premium coding challenges,
+            with the free option providing access to a range of projects
+            suitable for all skill levels.
+          </p>
+        </div>
+        <div>
+          <h4>
+            Can I use Frontend Mentor projects in my portfolio?<img
+              src="./assets/images/icon-plus.svg"
+              alt="expand"
+            />
+          </h4>
 
-        <p class="answer hidden">
-          Yes, you can use projects completed on Frontend Mentor in your
-          portfolio. It's an excellent way to showcase your skills to potential
-          employers!
-        </p>
+          <p class="answer hidden">
+            Yes, you can use projects completed on Frontend Mentor in your
+            portfolio. It's an excellent way to showcase your skills to
+            potential employers!
+          </p>
+        </div>
 
-        <h4>
-          How can I get help if I'm stuck on a Frontend Mentor challenge?<img
-            src="./assets/images/icon-plus.svg"
-            alt="expand"
-          />
-        </h4>
+        <div>
+          <h4>
+            How can I get help if I'm stuck on a Frontend Mentor challenge?<img
+              src="./assets/images/icon-plus.svg"
+              alt="expand"
+            />
+          </h4>
 
-        <p class="answer hidden">
-          The best place to get help is inside Frontend Mentor's Discord
-          community. There's a help channel where you can ask questions and seek
-          support from other community members.
-        </p>
+          <p class="answer hidden">
+            The best place to get help is inside Frontend Mentor's Discord
+            community. There's a help channel where you can ask questions and
+            seek support from other community members.
+          </p>
+        </div>
       </div>
     </div>
   </body>
